# NHMG

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  README_ada  README_caparmor  README_curie  README_datarmor  README_iuem  README_ubo  config.status  configure  configure.ac  libtool
NHMG/: .gitignore  AUTHORS~  Makefile.am  Makefile.am~  Makefile.in  README  README_curie  configure  configure.ac  configure.ac~
NHMG/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
NHMG/src/: Makefile.am  Makefile.in  mg_btbc_coupling.f90  mg_btbc_coupling.f90~  mg_compute_barofrc.f90~  mg_compute_fluxes.f90~  mg_compute_rhs.f90  mg_compute_rhs.f90~  mg_correct_uvw.f90~  mg_define_matrices.f90  mg_define_matrices.f90~  mg_gather.f90  mg_gather.f90~  mg_grids.f90  mg_grids.f90~  mg_horiz_grids.f90~  mg_intergrids.f90  mg_intergrids.f90~  mg_mpi.f90  mg_mpi.f90~  mg_mpi_exchange.f90~  mg_namelist.f90~  mg_netcdf_out.f90~  mg_relax.f90  mg_relax.f90~  mg_set_bbc.f90  mg_set_bbc.f90~  mg_solvers.f90  mg_solvers.f90~  mg_tictoc.f90~  mg_zr_zw.f90~  nhmg.f90
NHMG/tests/: Makefile.am  Makefile.am~  Makefile.in  mg_testcuc.f90  mg_testseamount.f90
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
examples/matlab/: Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  mg_autotune.f90  mg_bbc.f90  mg_btbc_coupling.f90  mg_compute_barofrc.f90  mg_compute_fluxes.f90  mg_compute_rhs.f90  mg_correct_uvw.f90  mg_coupling.f90  mg_coupling_1.f90  mg_coupling_2.f90  mg_coupling_2_HzHzhalf.f90  mg_coupling_2_cartesian.f90  mg_coupling_cartesian.f90  mg_cst.f90  mg_fluxes.f90  mg_fluxes_cartesian.f90  mg_gather.f90  mg_grids.f90  mg_horiz_grids.f90  mg_intergrids.f90  mg_mpi_exchange.f90  mg_namelist.f90  mg_netcdf_out.f90  mg_projection.f90  mg_projection_HzHzhalf.f90  mg_set_bbc.f90  mg_set_matrices.f90  mg_solvers.f90  mg_tictoc.f90  mg_vert_grids.f90  mg_zr_zw.f90  nhmg.f90  nhmg.f90~  nhmg_1.f90  nhmg_2.f90  nhmg_2_HzHzhalf.f90  nhmg_debug.f90
tests/: Makefile  Makefile.am  Makefile.in  mg_mpi_exchange_ijk.f90  mg_setup_tests.f90  mg_testcuc.f90  mg_testfillhalo.f90  mg_testrndtopo.f90  mg_testseamount.f90  mg_testseamount_rnd.f90  mg_zr_hz.f90  mg_zr_zw.f90  nhmg_namelist  nhmg_ncjoin.f90  nhydro.f90  testfillhalo
