########################################################################
##- Author@mail: Nicolas.Grima@univ-brest.fr
##- Date       : November 2016
########################################################################
SUBDIRS	       = .
matlabdir    = $(prefix)
matlab_DATA  = *.m
EXTRA_DIST     = $(matlab_DATA)

